--- a/EnviromentalApp/EnviromentalApp.csproj
+++ b/EnviromentalApp/EnviromentalApp.csproj
@@ -26,6 +26,8 @@
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.enviromentalapp</ApplicationId>
 
+		<WindowsSdkPackageVersion>10.0.19041.53</WindowsSdkPackageVersion>
+
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
@@ -57,6 +59,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
