--- a/EnviromentalApp/EnviromentalApp.csproj
+++ b/EnviromentalApp/EnviromentalApp.csproj
@@ -70,6 +70,9 @@
 
 	<ItemGroup>
 		<EmbeddedResource Include="appsettings.json" />
+		<Compile Update="Views\Notepage.xaml.cs">
+		  <DependentUpon>Notepage.xaml</DependentUpon>
+		</Compile>
 		<None Update="appsettings.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
