--- a/EnviromentalApp/appsettings.json
+++ b/EnviromentalApp/appsettings.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
-        "DevelopmentConnection": "Server=192.168.0.100;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;"
+        "DevelopmentConnection": "Server=146.176.148.165;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;",
+        "TestConnection": "Server=146.176.148.165;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;"
     }
 }
