--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,10 @@ jobs:
             dotnet-version: 8.0
             
         - name: Restore workloads
-          run: dotnet workload restore ./Notes/Notes.csproj
+          run: dotnet workload restore ./EnviromentalApp/EnviromentalApp.csproj
           
         - name: Restore dependencies
-          run: dotnet restore ./Notes/Notes.csproj
+          run: dotnet restore ./EnviromentalApp/EnviromentalApp.csproj
              
         - name: Build project
-          run: dotnet build ./Notes/Notes.csproj --framework net8.0
+          run: dotnet build ./EnviromentalApp/EnviromentalApp.csproj --framework net8.0
