Fixed some cosmetic issue with the application

--- a/EnviromentalApp/appsettings.json
+++ b/EnviromentalApp/appsettings.json
@@ -1,6 +1,5 @@
 {
     "ConnectionStrings": {
-        "DevelopmentConnection": "Server=146.176.148.165;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;",
-        "TestConnection": "Server=146.176.148.165;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;"
+        "DevelopmentConnection": "Server=172.27.160.1;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;"
     }
 }
