--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ $RECYCLE.BIN/
 EnviromentalApp.Test/obj
 EnviromentalApp.Test/bin
 
+EnviromentalApp/bin/
+EnviromentalApp/obj/
+EnviromentalApp.Database/obj/
+EnviromentalApp.Database/bin/
+EnviromentalApp.Database/appsettings.json
+EnviromentalApp.Migrations/obj/
+EnviromentalApp.Migrations/bin/
+.vscode
