--- a/EnviromentalApp.Database/appsettings.json
+++ b/EnviromentalApp.Database/appsettings.json
@@ -1,5 +1,6 @@
 {
     "ConnectionStrings": {
-        "DevelopmentConnection": "Server=172.27.160.1;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;"
+        "DevelopmentConnection": "Server=172.27.160.1;Database=enviromentappdb;User Id=EnviromentalApp25; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;",
+        "TestConnection": "Server=172.27.160.1;Database=testdb;User Id=enviromentApp; Password=EnviroApp25!;TrustServerCertificate=True;Encrypt=True;"
     }
 }
